--- a/test/JS/B站JS/oMingECharts/css/index.less
+++ b/test/JS/B站JS/oMingECharts/css/index.less
@@ -55,6 +55,7 @@ header {
     .column:nth-child(2){
         flex: 5;
         margin: 0 0.125rem 0.1875rem;
+        overflow: hidden;
     }
     .panel{
         position: relative;
@@ -92,11 +93,16 @@ header {
         text-align: center;
         font-size: 0.25rem;
         font-weight: 400;
+        a{
+            color: #fff;
+            text-decoration: none;
+            margin: 0 0.5rem;
+        }
     }
-    .chart{
-        height: 3rem;
-        background-color: #02a6e5;
-    }
+}
+.main-box .panel .chart{
+    height: 3rem;
+    width: 100%;
 }
 
 .no{
@@ -190,7 +196,6 @@ header {
         transform: translate(-50%,-50%);
         background: url(../images/lbx.png) no-repeat center center;
         background-size: 100% 100%;
-        z-index: -1;
         animation: spin-1 15s linear infinite;
     }
     .spin-2{
@@ -202,10 +207,18 @@ header {
         transform: translate(-50%,-50%);
         background: url(../images/jt.png) no-repeat center center;
         background-size: 100% 100%;
-        z-index: 1;
         animation: spin-2 10s linear infinite;
     }
 }
+.map .chart {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 5;
+    height: 10.125rem;
+    width: 100%;
+}
+
 @keyframes spin-1{
     from{
         transform: translate(-50%,-50%) rotateZ(0deg);
@@ -220,5 +233,17 @@ header {
     }
     to{
         transform: translate(-50%,-50%) rotateZ(-360deg);
+    }
+}
+
+/* 约束屏幕尺寸 */
+@media screen and (max-width: 1024px) {
+    html {
+        font-size: 42px !important;
+    }
+}
+@media screen and (min-width: 1920px) {
+    html {
+        font-size: 80px !important;
     }
 }
