--- a/importantProject/CSS/B站CSS/水滴动画/style.css
+++ b/importantProject/CSS/B站CSS/水滴动画/style.css
@@ -42,8 +42,8 @@ body{
 
 span{
     position: absolute;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
+    font-weight: 1000;
+    font-size: 15px;
 }
 
 @keyframes drop{
