--- a/importantProject/CSS/YouTubeCSS/flipCard/style.css
+++ b/importantProject/CSS/YouTubeCSS/flipCard/style.css
@@ -13,6 +13,7 @@ body{
     width: 220px;
     height: 516px;
     position: relative;
+    transform-style: preserve-3d;
     perspective: 1000px;
 }
 .cover,.back{
