--- a/importantProject/CSS/YouTubeCSS/inputAnimation/style.css
+++ b/importantProject/CSS/YouTubeCSS/inputAnimation/style.css
@@ -11,7 +11,7 @@ body{
     align-items: center;
     flex-direction: column;
     font-family: sans-serif;
-    background-color: #03c9a9;
+    background-color: #4E8397;
 }
 
 .form{
@@ -25,7 +25,7 @@ body{
     height: 100%;
     padding-top: 20px;
     border: none;
-    background-color: #03c9a9;
+    background-color: #4E8397;
     outline: none;
 }
 .form label{
@@ -35,17 +35,16 @@ body{
     width: 100%;
     height: 100%;
     pointer-events: none;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #000;
 }
 .form label::after{
     content: "";
     position: absolute;
     left: 0px;
-    bottom: -1px;
+    bottom: 0px;
     width: 100%;
     height: 100%;
-    border-bottom: 3px solid black;
-    transform: translateY(5%);
+    border-bottom: 2px solid #000;
     transition: all 0.5s ease-in;
     opacity: 0;
 }
@@ -60,11 +59,15 @@ body{
 .form input:focus + .label-name .content-name,
 .form input:valid + .label-name .content-name{
     transform: translateY(-150%);
-    font-size: 15px;
+    font-size: 12px;
+    color: #000;
 }
 
 .form input:focus + .label-name::after,
 .form input:valid + .label-name::after{
     opacity: 1;
-    transform: translateY(0%);
+}
+.form input:focus + label,
+.form input:valid + label {
+    border-bottom: 0px solid #000;
 }
